affiche un titre par défaut pour les posts sans titre sur /del

--- a/templates/del_post.html
+++ b/templates/del_post.html
@@ -1,7 +1,11 @@
 {% extends "layout.html" %}
 {% block main %}
   {% for post in posts %}
-    <a href="/del/{{ post['rowid'] }}" class="red">{{ post['title'] }}</a><br />
+    {% if post['title'] %}
+      <a href="/del/{{ post['rowid'] }}" class="red">{{ post['title'] }}</a><br />
+    {% else %}
+      <a href="/del/{{ post['rowid'] }}" class="red">&lt;no title&gt;</a><br />
+    {% endif %}
   {% endfor %}
   <p><a href="/">Back</a></p>
 {% endblock %}
