--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 {% block main %}
-<form action="" method="post">
+<form action="" method="post" class="login_form">
   <p>
+    identifiant :
     <input type="text" name="username" /><br />
+    mot de passe :
     <input type="password" name="password" />
   </p>
   <p><input type="submit" value="login" /></p>
