modifie les urls du backend et demande le login pour /manage

--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -4,7 +4,7 @@
       <div class="error">{{error}}</div>
   {% endif %}
       <div class="add_post">
-        <form action="/add" method="POST">
+        <form action="/manage/add" method="POST">
           <p>
             <input type="text" name="title" /> (title optional)
           </p>
