--- a/templates/manage.html
+++ b/templates/manage.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block main %}
 <p>
-  <a href="/add">Add a post</a><br />
-  <a href="/del">Delete a post</a>
+  <a href="/manage/add">Add a post</a><br />
+  <a href="/manage/delete">Delete a post</a>
 </p>
 {% endblock %}
