--- a/pyblogr/templates/list_posts.html
+++ b/pyblogr/templates/list_posts.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block main %}
   {% for post in posts %}
-      <div class="post">
+      <article>
         <div class="datetime">
           {{post.datetime}}<br />
           <a href="#">0 commentaires</a><br />
@@ -11,6 +11,6 @@
         <h2>{{post.title}}</h2>
         {% endif %}
         {{post.content|safe}}
-      </div>
+      </article>
   {% endfor %}
 {% endblock %}
